完成了获取note列表的API
